<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:dsp="http://schemas.android.com/apk/res-auto"
                tools:context="com.or_oz.ultimatewifitool.PasswdFragment">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generatePasswd"
        android:id="@+id/generatePasswdButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwdResult"
        android:id="@+id/passwdResultTextView"
        android:layout_above="@+id/generatePasswdButton"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_marginBottom="78sp"/>

    <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
        android:id="@+id/seeker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:dsb_min="8"
        app:dsb_max="31"
        app:dsb_value="12"
        app:dsb_rippleColor="#FF7788FF"
        app:dsb_progressColor="@color/my_progress_color"
        app:dsb_indicatorColor="@color/my_floater_color"
        android:layout_marginTop="72dp"
        android:layout_below="@+id/generatePasswdButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboveSeekerText"
        android:id="@+id/aboveSeekerText"
        android:layout_below="@+id/generatePasswdButton"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/passwdMeCredits"
        android:id="@+id/credits"
        android:textColor="@color/material_blue_grey_800"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Long press on the password to copy to clipboard"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/aboveSeekerText"
        android:layout_alignEnd="@+id/aboveSeekerText"/>

</RelativeLayout>
